--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
             <a href="hhttps://youtu.be/vxYSM_sNm4A?si=TZlFGELvvWaKXS4_">
                 <img src="https://img.youtube.com/vi/vxYSM_sNm4A/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=95ZDKhPkWiU">
+                <img src="https://img.youtube.com/vi/95ZDKhPkWiU/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
-            </a>
+            <a href=">
+                <img src="
+            <a href=">
+                <img src="
+            <a href="">
+                <img src="
         </div>
     </section>
 
