--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=eQXuGxGz2yc&t=12s"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ngRNnRJAC1g"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -31,13 +31,17 @@
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
             <a href="hhttps://youtu.be/vxYSM_sNm4A?si=TZlFGELvvWaKXS4_">
-                <img src="https://img.youtube.com/vi/vxYSM_sNm4A/maxresdefault.jpg" />
+                <img src="https://img.youtube.com/vi/vxYSM_sNm4A/maxresdefault.jpg" 
+                />
             </a>
-            <a href="https://www.youtube.com/watch?v=95ZDKhPkWiU">
-                <img src="https://img.youtube.com/vi/95ZDKhPkWiU/maxresdefault.jpg" />
+            <a
+         href="https://www.youtube.com/watch?v=95ZDKhPkWiU">
+                <img src="https://img.youtube.com/vi/95ZDKhPkWiU/maxresdefault.jpg" 
+                />
             </a>
             <a href=">
                 <img src="
+
             <a href=">
                 <img src="
             <a href="">
