--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>TROPA DE ELITE 2</h1>
+            <h1>TROPA DE ELITE</h1>
             <p>#tropadelite</p>
         </div>
 
