--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
             </a>
             <a
          href="https://www.youtube.com/watch?v=95ZDKhPkWiU">
-                <img src="https://img.youtube.com/vi/95ZDKhPkWiU/maxresdefault.jpg" 
-                />
+                <img src="https://img.youtube.com/vi/95ZDKhPkWiU/maxresdefault.jpg" />
             </a>
-            <a href=">
+            <a href="https://www.youtube.com/watch?v=cz3xMlRPdz4">
                 <img src="
 
             <a href=">
