--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
          href="https://www.youtube.com/watch?v=95ZDKhPkWiU">
                 <img src="https://img.youtube.com/vi/95ZDKhPkWiU/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=cz3xMlRPdz4">
-                <img src="
+            <a href="https://www.youtube.com/watch?v=cz3xMlRPdz4" >
+                <img src= "https://img.youtube.com/vi/cz3xMlRPdz4/maxresdefault.jpg" />
 
             <a href=">
                 <img src="
