--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <header>ALURAFLIX</hea
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ASSASSINO A PREÇO FIXO 2</h1>
-            <p>#assassinoapreçofixo2</p>
+            <h1>Os Mercenários</h1>
+            <p>Mercenários</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=-nHVI_SlnWI"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=SBoODpO-DT0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
