--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
             <a href="https://www.youtube.com/watch?v=yBFdpAH-0Mk >
                 <img src= "https://img.youtube.com/vi/yBFdpAH-0Mk/maxresdefault.jpg" />
-            <a href="">
-                <img src="
+                
+            <a href="https://www.youtube.com/watch?v=Kswb1Uk_zK4">
+                <img src="https://img.youtube.com/vi/Kswb1Uk_zK4/maxresdefault.jpg
         </div>
     </section>
 
