--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=SBoODpO-DT0"
+            <iframe width="560" height="315" src="https://img.youtube.com/vi/SBoODpO-DT0/maxresdefault.jpg"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -42,7 +42,7 @@
 
             <a href="https://www.youtube.com/watch?v=yBFdpAH-0Mk >
                 <img src= "https://img.youtube.com/vi/yBFdpAH-0Mk/maxresdefault.jpg" />
-                
+
             <a href="https://www.youtube.com/watch?v=Kswb1Uk_zK4">
                 <img src="https://img.youtube.com/vi/Kswb1Uk_zK4/maxresdefault.jpg
         </div>
