--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <img src="https://img.youtube.com/vi/Kswb1Uk_zK4/maxresdefault.jpg
         </div>
     </section>
-
+img {
+  height: 200px;
+}
 </body>
 
 
