--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="https://www.youtube.com/watch?v=cz3xMlRPdz4" >
                 <img src= "https://img.youtube.com/vi/cz3xMlRPdz4/maxresdefault.jpg" />
 
-            <a href="https://www.youtube.com/watch?v=yBFdpAH-0Mk >
+            <a href="https://www.youtube.com/watch?v=yBFdpAH-0Mk" >
                 <img src= "https://img.youtube.com/vi/yBFdpAH-0Mk/maxresdefault.jpg" />
 
             <a href="https://www.youtube.com/watch?v=Kswb1Uk_zK4">
