--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 </head>
 
 <body>
-    <header>ALURAFLIX</hea
+    <header>GUIMINAMFLIX</header>
+
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Os Mercenários</h1>
-            <p>Mercenários</p>
+            <h1>ATRAVÉS DO ARANHAVERSO</h1>
+            <p>#homem-aranha</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://img.youtube.com/vi/SBoODpO-DT0/maxresdefault.jpg"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -29,28 +30,24 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="hhttps://youtu.be/vxYSM_sNm4A?si=TZlFGELvvWaKXS4_">
-                <img src="https://img.youtube.com/vi/vxYSM_sNm4A/maxresdefault.jpg" 
-                />
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
-            <a
-         href="https://www.youtube.com/watch?v=95ZDKhPkWiU">
-                <img src="https://img.youtube.com/vi/95ZDKhPkWiU/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=cz3xMlRPdz4" >
-                <img src= "https://img.youtube.com/vi/cz3xMlRPdz4/maxresdefault.jpg" />
-
-            <a href="https://www.youtube.com/watch?v=yBFdpAH-0Mk" >
-                <img src= "https://img.youtube.com/vi/yBFdpAH-0Mk/maxresdefault.jpg" />
-
-            <a href="https://www.youtube.com/watch?v=Kswb1Uk_zK4">
-                <img src="https://img.youtube.com/vi/Kswb1Uk_zK4/maxresdefault.jpg
+            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            </a>
         </div>
     </section>
-img {
-  height: 200px;
-}
-</body>
 
+</body>
 
 </html>
